--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.315",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
+    "@types/webextension-polyfill": "^0.12.3",
     "@wxt-dev/module-react": "^1.1.3",
     "typescript": "^5.8.3",
     "wxt": "^0.20.0"
