--- a/package.json
+++ b/package.json
@@ -12,19 +12,41 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
+    "lint":    "eslint . --ext .ts,.tsx",
+    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,json,css,md}\"",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.27.0",
+    "core-js": "^3.41.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "regenerator-runtime": "^0.14.1",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/chrome": "^0.0.315",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@types/webextension-polyfill": "^0.12.3",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "@wxt-dev/module-react": "^1.1.3",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3",
     "wxt": "^0.20.0"
   }
